syntax = "proto3";
package reinhardt.user;

import "common.proto";

// User type definition
message User {
  string id = 1;
  string name = 2;
  string email = 3;
  bool active = 4;
  reinhardt.common.Timestamp created_at = 5;
  reinhardt.common.Timestamp updated_at = 6;
}

// Request/Response types
message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message GetUserRequest {
  string id = 1;
}

message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total = 2;
}

message UpdateUserRequest {
  string id = 1;
  optional string name = 2;
  optional string email = 3;
  optional bool active = 4;
}

message DeleteUserRequest {
  string id = 1;
}

// UserService definition (Unary RPCs)
service UserService {
  rpc CreateUser(CreateUserRequest) returns (User);
  rpc GetUser(GetUserRequest) returns (User);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc UpdateUser(UpdateUserRequest) returns (User);
  rpc DeleteUser(DeleteUserRequest) returns (reinhardt.common.Empty);
}
